# connectedhomeip

./: .gitmodules  .gn  BUILD.gn  run-commision-wifi-test.sh
.github/workflows/: cirque.yaml  gradle-wrapper-validation.yml
config/esp32/: BUILD.gn
config/openiotsdk/chip-gn/: .gn  BUILD.gn
config/openiotsdk/cmake/: linker.cmake
config/zephyr/: Kconfig
examples/all-clusters-app/openiotsdk/: CMakeLists.txt
examples/lighting-app/lighting-common/: BUILD.gn  lighting-app.zap
examples/lock-app/openiotsdk/: CMakeLists.txt
examples/ota-requestor-app/openiotsdk/: CMakeLists.txt
examples/shell/openiotsdk/: CMakeLists.txt
examples/tv-app/openiotsdk/: CMakeLists.txt
scripts/: jinja_template.py
scripts/examples/tests/: test_project.json
scripts/py_matter_yamltests/matter_yamltests/: websocket_runner.py
scripts/tests/: run_test_suite.py
scripts/tests/chiptest/: linux.py  test_definition.py
scripts/tests/yaml/: chiptool.py
src/: BUILD.gn
src/access/tests/: BUILD.gn  TestAccessControl.cpp
src/app/: chip_data_model.gni
src/lib/support/: BUILD.gn  UnitTest.cpp  UnitTest.h  UnitTestRegistration.cpp  UnitTestRegistration.h
src/platform/mbed/: PlatformManagerImpl.h
src/system/: SystemConfig.h
src/test_driver/efr32/: .gn  BUILD.gn  README.md  args.gni
src/test_driver/efr32/py/: BUILD.gn
src/test_driver/efr32/src/: main.cpp
src/test_driver/esp32/: CMakeLists.txt
src/test_driver/esp32/cmake/: esp32_unit_tests.cmake
src/test_driver/esp32/main/: CMakeLists.txt  main_app.cpp
src/test_driver/nrfconnect/: CMakeLists.txt  prj.conf
(+24 files in other folders)
