# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("${chip_root}/src/app/chip_data_model.gni")
import("${chip_root}/build/config/jinja_templates.gn")

config("config") {
  include_dirs = [ "include" ]
}

generate_jinja_template("generate_jinja_template") {
  jinja_template = "lighting-app.zap.jinja"
  out = "$target_gen_dir/lighting-app.zap"
  variables = [ "unique_id_disabled=true" ]
}

chip_data_model("lighting-common") {
  zap_file = "$target_gen_dir/lighting-app.zap"
  is_server = true
  deps = [":generate_jinja_template"]
}

source_set("color-format") {
  public_configs = [ ":config" ]
  sources = [
    "include/ColorFormat.h",
    "src/ColorFormat.cpp",
  ]
}

source_set("lighting-manager") {
  deps = [ "${chip_root}/src/lib" ]
  public_configs = [ ":config" ]
  sources = [
    "include/LightingManager.h",
    "src/LightingManager.cpp",
  ]
}
